fix page content not stretching to screen height

--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -2,6 +2,9 @@
   width: 1200px;
   line-height: 1.25;
   margin: 0 auto;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .container {
@@ -11,7 +14,7 @@
   gap: 0px 0px;
   grid-auto-flow: row;
   grid-template-areas: "sidebar content";
-  height: 800px;
+  height: 100%;
 }
 
 .appbar {
